--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">Social App</string>
     <string name="action_settings">Logout</string>
     <string name="facebook_app_id">1094645277223017</string>
+
+    <string name="canceled">"Login was canceled. Try again"</string>
+    <string name="error">"Login error. Try Again"</string>
+
+    <string name="religion">"Religião: "</string>
+    <string name="relation_ship">Relacionamento: </string>
+    <string name="education">Educação: estuda na </string>
+    <string name="work">Ocupação: trabalha em </string>
+    <string name="about_you">"Sobre você: "</string>
+
 </resources>
